# phoenix-ide

./: .gitignore  .phoenix-ide.dev.env  AGENTS.md  AGENT_PROMPT_MODEL_REGISTRY.md  CONTINUATION_CONTEXT.md  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  EXE_DEV_AI_GATEWAY_SPEC.md  IMPLEMENTATION_SUMMARY.md  ISSUE_TRIAGE.md  NAVIGATION_FIX.md  NAVIGATION_PERFORMANCE_SUMMARY.md  QA_PLAN.md  QA_RESULTS.md  README.md  STATE_MACHINE_EVALUATION.md  STATE_MACHINE_FIX_PLAN.md  TLS.md  VOICE_IMPLEMENTATION_PROMPT.md  cache-test.html  create_large_conversation.py  demo_patch_fix.sh  dev.py  frontend-performance-analysis.md  phoenix-browser-tool-requirements.md  phoenix-client.py  rust-toolchain.toml  serve-https.js  skills-lock.json  test_compression.sh  test_performance.py  test_performance.sh  test_virtual_scroll.sh  test_virtual_scroll_fixed.sh
.cargo/: config.toml
.claude/commands/: review-mvp-scope.md
.github/workflows/: release.yml
ast-grep-rules/: ts-ref-current-optional-data-call.yml
certs/: generate-cert.sh  localhost.crt  localhost.key
docs/: ux-audit-adaptive-layout.md
dogfood-output/: auto-stash-qa.md  mode-system-qa.md  report.md
lima/: phoenix-ide.yaml
proptest-regressions/state_machine/: proptests.txt
proptest-regressions/terminal/: alac_proptests.txt  proptests.txt  relay.txt  wez_proptests.txt
scripts/: build-taskmd-wheel.sh  cut-a-version.sh  dummy-auth-helper.sh  install.sh  tag-release.sh
skills/: README.md
skills/phoenix-deployment/: DAEMON.md  LIMA.md  SKILL.md  SYSTEMD.md
skills/phoenix-development/: SKILL.md
skills/phoenix-task-tracking/: SKILL.md
specs/: mode-requirements-draft.md
specs/agent-identity/: design.md  executive.md  requirements.md
specs/api/: design.md  executive.md  requirements.md
specs/ask-user-question/: design.md  executive.md  requirements.md
specs/auth/: auth.allium  design.md  executive.md  requirements.md
specs/bash/: bash.allium  design.md  executive.md  requirements.md
specs/bedrock/: bedrock.allium  design.md  executive.md  requirements.md
specs/browser-tool/: design.md  executive.md  requirements.md
specs/builtin-skills/: builtin-skills.allium  design.md  executive.md
specs/chains/: design.md  executive.md  requirements.md
specs/command-palette/: design.md  executive.md  requirements.md
specs/connection_machine/: connection_machine.allium
specs/conversation_atom/: conversation_atom.allium
specs/credential-helper/: credential-helper.allium  design.md  executive.md  requirements.md
specs/file-explorer/: design.md  executive.md  requirements.md
specs/inline-references/: design.md  executive.md  inline-references.allium  requirements.md
specs/keyboard-interaction/: design.md  executive.md  requirements.md
specs/keyword_search/: design.md  executive.md  requirements.md
specs/llm/: design.md  executive.md  requirements.md
specs/notifications/: design.md  executive.md  notifications.allium  requirements.md
specs/patch/: design.md  executive.md  patch.allium  requirements.md
specs/projects/: design.md  executive.md  m4-discovery-handoff.md  projects.allium  requirements.md
specs/prose-feedback/: design.md  executive.md  requirements.md
specs/seeded-conversations/: requirements.md
specs/simple_client/: design.md  executive.md  requirements.md
specs/skills/: design.md  executive.md  requirements.md  skills.allium
specs/sse_wire/: sse_wire.allium
src/: api.rs  chain_qa.rs  chain_runtime.rs  db.rs  git_ops.rs  hot_restart.rs  llm.rs  main.rs  message_expander.rs  platform.rs  runtime.rs  skills.rs  state_machine.rs  system_prompt.rs  terminal.rs  title_generator.rs  tls.rs  tls_certs.rs  tools.rs
static/: app.js  index.html  style.css
systemd/: phoenix-ide.service  phoenix-ide.socket
tasks/: 0009-p2-done--enforce-pedantic-clippy-lints.md  001-refactor-executor-to-use-traits.md  0012-p2-done--add-cancellation-test-coverage.md  0013-p2-done--implement-sub-agent-feature.md  0016-p1-done--graceful-shutdown-recovery.md  002-p2-blocked-add-integration-tests-with-mocks.md  0022-p3-done--ui-image-upload.md  0023-p3-done--ui-subagent-visualization.md  0027-p4-done--ui-keyboard-shortcuts.md  0028-p4-ready--ui-search-filter.md  0029-p3-done--ui-context-window-indicator.md  003-fix-flaky-patch-proptest.md  003-p3-done-fix-flaky-patch-proptest.md  0030-p2-done--typed-state-persistence.md  0031-p3-done--persist-inflight-message-tracking.md  0032-p3-done--localstorage-quota-feedback.md  0033-p3-done--useeffect-dependency-cleanup.md  004-clean-up-compiler-warnings.md  005-document-state-transition-behavior.md  005-p3-done-document-state-transition-behavior.md  006-implement-read-image-tool.md  007-stronger-typing-for-message-content.md  008-add-ci-workflow.md  009-enforce-pedantic-clippy-lints.md  010-fix-rename-api-field-name.md  011-implement-static-asset-serving.md  011-p3-blocked-implement-static-asset-serving.md  012-add-cancellation-test-coverage.md  013-implement-sub-agent-feature.md  014-implement-llm-request-cancellation.md  015-kill-bash-subprocesses-on-cancel.md  015-p2-done-kill-bash-subprocesses-on-cancel.md  016-add-cancellation-timing-integration-test.md  017-fix-clipboard-paste-proptest.md  017-forbid-mod-rs-files.md  017-p3-done-forbid-mod-rs-files.md  018-api-route-naming-consistency.md  018-server-error-retry-fix.md  019-mvp-ui.md  020-granular-state-change-events.md  (+791 more)
ui/: .eslintrc.cjs  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui-audit/: INVENTORY.md  RUBRIC.md  agent-message.md  breadcrumb-bar.md  jump-to-newest-button.md  question-panel.md  queued-user-message.md  skill-invocation.md  state-indicator-bar.md  streaming-message.md  subagent-status-block.md  system-message.md  task-approval-reader.md  tool-call-bash.md  tool-call-generic.md  tool-call-keyword-search.md  tool-call-patch.md  tool-call-read-image.md  tool-call-spawn-agents.md  tool-call-think.md  tool-result-image.md  tool-result-subagent-summary.md  tool-result-text.md  user-message.md
(+322 files in other folders)
