[package]
name = "phoenix_ide"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
rand = "0.8"
similar = "2"  # For generating diffs

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Browser automation
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime", "_fetcher-rustls-tokio"] }
brush-parser = "0.3.0"
listenfd = "1.0.2"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
float_cmp = "deny"
manual_memcpy = "deny"
redundant_allocation = "deny"
rc_buffer = "deny"
unnecessary_to_owned = "deny"
dbg_macro = "deny"
mod_module_files = "deny"

[lints.rust]
unused_extern_crates = "deny"
unused_allocation = "deny"
unused_assignments = "deny"
unused_comparisons = "deny"

[profile.release]
debug = true  # Include debug symbols for production debugging
