[package]
name = "phoenix_ide"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[[bin]]
name = "phoenix-monitor"
path = "src/bin/monitor.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-full", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
rusqlite = "0.32"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
rand = "0.8"
similar = "2"  # For generating diffs

# Process management
nix = { version = "0.29", features = ["signal", "process"] }

# Gitignore-aware directory walking (for file search)
ignore = "0.4"

# Regex for search tool
regex = "1"

# Browser automation
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime", "_fetcher-rustls-tokio"] }
brush-parser = "0.3.0"
taskmd-core = { git = "https://github.com/scottopell/taskmd.git" }
listenfd = "1.0.2"
nucleo-matcher = "0.3.1"

# TUI monitor
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
float_cmp = "deny"
manual_memcpy = "deny"
redundant_allocation = "deny"
rc_buffer = "deny"
unnecessary_to_owned = "deny"
dbg_macro = "deny"
mod_module_files = "deny"
string_slice = "deny"

[lints.rust]
unused_extern_crates = "deny"
unused_allocation = "deny"
unused_assignments = "deny"
unused_comparisons = "deny"

[profile.release]
debug = true  # Include debug symbols for production debugging

# Optimize heavy dependencies even in debug builds to reduce:
# - Incremental build time
# - Binary size (prevents debug build linker hangs)
# - Memory pressure during linking
# These crates are rarely debugged and benefit from release optimizations.

[profile.dev.package.chromiumoxide]
opt-level = 3

[profile.dev.package.chromiumoxide_cdp]
opt-level = 3

[profile.dev.package.chromiumoxide_types]
opt-level = 3

[profile.dev.package.chromiumoxide_fetcher]
opt-level = 3

[profile.dev.package.chromiumoxide_pdl]
opt-level = 3

# Heavy async/web dependencies
[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.reqwest]
opt-level = 3

[profile.dev.package.hyper]
opt-level = 3


# Compression/encoding (CPU intensive)
[profile.dev.package.zstd]
opt-level = 3

[profile.dev.package.zstd-sys]
opt-level = 3

[profile.dev.package.brotli]
opt-level = 3

[profile.dev.package.flate2]
opt-level = 3

# Database (rarely debugged)
[profile.dev.package.sqlx]
opt-level = 3

[profile.dev.package.sqlx-core]
opt-level = 3

[profile.dev.package.sqlx-sqlite]
opt-level = 3

# TLS/crypto (never debug these)
[profile.dev.package.rustls]
opt-level = 3

[profile.dev.package.ring]
opt-level = 3

[profile.dev.package.rustls-webpki]
opt-level = 3
