[package]
name = "phoenix_ide"
version = "0.3.0"
edition = "2021"
rust-version = "1.94"

[[bin]]
name = "phoenix-monitor"
path = "src/bin/monitor.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-full", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
rusqlite = "0.32"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
rand = "0.8"
similar = "2"  # For generating diffs

# Process management
# Process management and PTY
nix = { version = "0.29", features = ["signal", "process", "term", "fs"] }
libc = "0.2"

# Terminal emulation / vt100 screen scraping (for read_terminal agent tool)
vt100 = "0.15"

# Gitignore-aware directory walking (for file search)
ignore = "0.4"

# Regex for search tool
regex = "1"

# Browser automation
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime", "_fetcher-rustls-tokio"] }
brush-parser = "0.3.0"
taskmd-core = { git = "https://github.com/scottopell/taskmd.git" }
listenfd = "1.0.2"
nucleo-matcher = "0.3.1"

# TUI monitor
ratatui = "0.29"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
unicode-security = "0.1.2"

[dev-dependencies]
tempfile = "3"
proptest = "1"
# Evaluation dev-deps (tasks 24673 and 24676). Gated to dev-deps — not shipped.
# Remove once go/no-go decisions are made for both evaluations.
tattoy-wezterm-term = "0.1.0-fork.5"
alacritty_terminal = { git = "https://github.com/alacritty/alacritty", tag = "v0.17.0", package = "alacritty_terminal", default-features = false }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
float_cmp = "deny"
manual_memcpy = "deny"
redundant_allocation = "deny"
rc_buffer = "deny"
unnecessary_to_owned = "deny"
dbg_macro = "deny"
mod_module_files = "deny"
string_slice = "deny"

[lints.rust]
unused_extern_crates = "deny"
unused_allocation = "deny"
unused_assignments = "deny"
unused_comparisons = "deny"

[profile.release]
debug = true  # Include debug symbols for production debugging

# Optimize heavy dependencies even in debug builds to reduce:
# - Incremental build time
# - Binary size (prevents debug build linker hangs)
# - Memory pressure during linking
# These crates are rarely debugged and benefit from release optimizations.

[profile.dev.package.chromiumoxide]
opt-level = 3

# Heavy async/web dependencies
[profile.dev.package.tokio]
opt-level = 3

[profile.dev.package.reqwest]
opt-level = 3

# Database (rarely debugged)
[profile.dev.package.sqlx]
opt-level = 3

[patch.crates-io]
# vt100 0.15.2 panics on byte sequences like [32, 32, 0] due to integer overflow
# in grid.rs col_wrap() (prev_pos.row -= scrolled with underflow).
# Fix: use saturating_sub. Tracked in task 08667.
# Remove this patch once an upstream release fixes the bug.
vt100 = { path = "vendor/vt100" }
